# RAG-against-the-machine

./: .gitignore  Makefile  README.md  pyproject.toml  t.txt
data/processed/bm25_index/: corpus.mmindex.json  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/chunks/: all_chunks.json
datasets_public/datasets_public/public/UnansweredQuestions/: dataset_code_public.json:Zone.Identifier
src/: __main__.py  cli.py  ingest.py  main.py  models.py  utils.py
test/txt_test/: text1.txt  text2.txt
vllm-0.10.1/vllm-0.10.1/tests/entrypoints/llm/: test_accuracy.py:Zone.Identifier
