[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "fire>=0.5.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "bm25s>=0.1.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
	"accelerate",
]

[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
